粗方終わり