@@ -1,8 +1,6 @@
 package net.okocraft.box.command;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -18,83 +16,94 @@ import net.okocraft.box.ConfigManager;
 import net.okocraft.box.database.Database;
 
 public class BoxTabCompleter implements TabCompleter {
-
     private Database database;
-    private Box instance;
     private ConfigManager configManager;
 
     public BoxTabCompleter(Database database) {
-        this.database = database;
-        this.instance = Box.getInstance();
-        configManager = instance.getConfigManager();
+        val instance = Box.getInstance();
 
-        instance.getCommand("box").setTabCompleter(this);
-        instance.getCommand("boxadmin").setTabCompleter(this);
+        this.database = database;
+        this.configManager = instance.getConfigManager();
+
+        Optional.ofNullable(instance.getCommand("box")).ifPresent(cmd ->
+                cmd.setTabCompleter(this)
+        );
+
+        Optional.ofNullable(instance.getCommand("boxadmin")).ifPresent(cmd ->
+                cmd.setTabCompleter(this)
+        );
     }
 
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String label, String[] args) {
+        val resultList = new ArrayList<String>();
 
-        List<String> resultList = new ArrayList<>();
         if (command.getName().equalsIgnoreCase("boxadmin")) {
-            if (!sender.hasPermission("box.admin"))
+            if (!sender.hasPermission("box.admin")) {
                 return resultList;
+            }
 
-            List<String> subCommands = new ArrayList<>(
-                    Arrays.asList("set", "give", "take", "reload", "test", "autostore", "database"));
+            val subCommands = List.of("set", "give", "take", "reload", "test", "autostore", "database");
+
             if (args.length == 1) {
                 return StringUtil.copyPartialMatches(args[0], subCommands, resultList);
             }
-            final String subCommand = args[0].toLowerCase();
-            if (!subCommands.contains(subCommand))
-                return resultList;
 
-            List<String> playerList = database.getPlayersMap().values().parallelStream().collect(Collectors.toList());
-            List<String> databaseSubCommands = Arrays.asList("addplayer", "removeplayer", "existplayer", "set", "get",
-                    "addcolumn", "dropcolumn", "getcolumnmap", "getplayersmap", "resetconnection");
+            val subCommand = args[0].toLowerCase();
+
+            if (!subCommands.contains(subCommand)) {
+                return resultList;
+            }
+
+            val playerList = database.getPlayersMap().values().parallelStream()
+                    .collect(Collectors.toList());
+            val databaseSubCommands = List.of(
+                    "addplayer", "removeplayer", "existplayer", "set", "get",
+                    "addcolumn", "dropcolumn", "getcolumnmap", "getplayersmap", "resetconnection"
+            );
 
             if (subCommand.equalsIgnoreCase("database")) {
-
                 if (args.length == 2) {
                     return StringUtil.copyPartialMatches(args[1], databaseSubCommands, resultList);
                 }
 
-                if (!databaseSubCommands.contains(args[1].toLowerCase()))
+                if (!databaseSubCommands.contains(args[1].toLowerCase())) {
                     return resultList;
+                }
 
-                List<String> columnList = new ArrayList<>(database.getColumnMap().keySet());
+                // TODO: new ArrayList<T>
+                val columnList = new ArrayList<>(database.getColumnMap().keySet());
+
                 if (args.length == 3) {
                     switch (args[1].toLowerCase()) {
                         case "addplayer":
                             return null;
                         case "removeplayer":
-                            return StringUtil.copyPartialMatches(args[2], playerList, resultList);
                         case "existplayer":
                             return StringUtil.copyPartialMatches(args[2], playerList, resultList);
                         case "set":
-                            return StringUtil.copyPartialMatches(args[2], columnList, resultList);
+                        case "dropcolumn":
                         case "get":
                             return StringUtil.copyPartialMatches(args[2], columnList, resultList);
                         case "addcolumn":
-                            return StringUtil.copyPartialMatches(args[2], Arrays.asList("<new_column_name>"), resultList);
-                        case "dropcolumn":
-                            return StringUtil.copyPartialMatches(args[2], columnList, resultList);
+                            return StringUtil.copyPartialMatches(args[2], Collections.singletonList("<new_column_name>"), resultList);
                     }
                 }
 
-                if (Arrays.asList("removeplayer", "existplayer").contains(args[1].toLowerCase()))
-                    if (!playerList.contains(args[2]))
-                        return resultList;
+                if (List.of("removeplayer", "existplayer").contains(args[1].toLowerCase()) &&
+                    !playerList.contains(args[2])) {
+                    return resultList;
+                }
 
-                if (Arrays.asList("set", "get", "dropcolumn").contains(args[1].toLowerCase()))
-                    if (!columnList.contains(args[2]))
-                        return resultList;
+                if (List.of("set", "get", "dropcolumn").contains(args[1].toLowerCase()) &&
+                    !columnList.contains(args[2])) {
+                    return resultList;
+                }
 
-                List<String> sqlTypeList = Arrays.asList("TEXT", "INTEGER", "NONE", "NUMERIC", "REAL");
+                val sqlTypeList = List.of("TEXT", "INTEGER", "NONE", "NUMERIC", "REAL");
                 if (args.length == 4) {
                     switch (args[1].toLowerCase()) {
                         case "set":
-                            return StringUtil.copyPartialMatches(args[3], playerList, resultList);
                         case "get":
                             return StringUtil.copyPartialMatches(args[3], playerList, resultList);
                         case "addcolumn":
@@ -102,18 +111,20 @@ public class BoxTabCompleter implements TabCompleter {
                     }
                 }
 
-                if (Arrays.asList("get", "set").contains(args[1].toLowerCase()))
-                    if (!playerList.contains(args[3]))
+                if (Arrays.asList("get", "set").contains(args[1].toLowerCase()) &&
+                    !playerList.contains(args[3])) {
                         return resultList;
+                }
 
-                if (args[1].equalsIgnoreCase("addcolumn"))
-                    if (!sqlTypeList.contains(args[3].toUpperCase()))
+                if (args[1].equalsIgnoreCase("addcolumn") &&
+                    !sqlTypeList.contains(args[3].toUpperCase())) {
                         return resultList;
+                }
 
                 if (args.length == 5) {
                     switch (args[1].toLowerCase()) {
                         case "set":
-                            return StringUtil.copyPartialMatches(args[4], Arrays.asList("<value>"), resultList);
+                            return StringUtil.copyPartialMatches(args[4], Collections.singletonList("<value>"), resultList);
                         case "addcolumn":
                             return StringUtil.copyPartialMatches(args[4], Arrays.asList("<default_value>", "null"),
                                     resultList);
@@ -124,38 +135,38 @@ public class BoxTabCompleter implements TabCompleter {
             }
 
             if (args.length == 2) {
-
                 switch (subCommand) {
                     case "set":
-                        return StringUtil.copyPartialMatches(args[1], playerList, resultList);
-                    case "give":
-                        return StringUtil.copyPartialMatches(args[1], playerList, resultList);
-                    case "take":
-                        return StringUtil.copyPartialMatches(args[1], playerList, resultList);
                     case "autostore":
+                    case "take":
+                    case "give":
                         return StringUtil.copyPartialMatches(args[1], playerList, resultList);
                 }
             }
 
-            if (!playerList.contains(args[1]))
+            if (!playerList.contains(args[1])) {
                 return resultList;
+            }
 
-            List<String> allItems = configManager.getAllItems();
-            List<String> allItemsClone = new ArrayList<>(allItems);
+            val allItems = configManager.getAllItems();
+            val allItemsClone = new ArrayList<>(allItems);
 
             int maxPage = allItemsClone.size() / 9;
             maxPage = (allItemsClone.size() % 9 == 0) ? maxPage : maxPage + 1;
-            allItemsClone.addAll(
-                    IntStream.rangeClosed(1, maxPage).boxed().map(String::valueOf).collect(Collectors.toList()));
+
+            allItemsClone.addAll(IntStream.rangeClosed(1, maxPage)
+                    .boxed()
+                    .map(String::valueOf)
+                    .collect(Collectors.toList())
+            );
+
             allItemsClone.add("ALL");
 
             if (args.length == 3) {
                 switch (subCommand) {
                     case "set":
-                        return StringUtil.copyPartialMatches(args[2], allItems, resultList);
-                    case "give":
-                        return StringUtil.copyPartialMatches(args[2], allItems, resultList);
                     case "take":
+                    case "give":
                         return StringUtil.copyPartialMatches(args[2], allItems, resultList);
                     case "autostore":
                         return StringUtil.copyPartialMatches(args[2], allItemsClone, resultList);
@@ -164,35 +175,31 @@ public class BoxTabCompleter implements TabCompleter {
 
             switch (subCommand) {
                 case "set":
-                    if (!allItems.contains(args[2].toUpperCase()))
-                        return resultList;
-                    break;
-                case "give":
-                    if (!allItems.contains(args[2].toUpperCase()))
-                        return resultList;
-                    break;
                 case "take":
-                    if (!allItems.contains(args[2].toUpperCase()))
+                case "give":
+                    if (!allItems.contains(args[2].toUpperCase())) {
                         return resultList;
+                    }
+
                     break;
                 case "autostore":
-                    if (!allItemsClone.contains(args[2].toUpperCase()))
+                    if (!allItemsClone.contains(args[2].toUpperCase())) {
                         return resultList;
+                    }
+
                     break;
                 default:
                     return resultList;
             }
-            if (!allItems.contains(args[2].toUpperCase()) && !args[2].equalsIgnoreCase("all"))
+
+            if (!allItems.contains(args[2].toUpperCase()) && !args[2].equalsIgnoreCase("all")) {
                 return resultList;
+            }
 
             if (args.length == 4) {
                 switch (subCommand) {
                     case "set":
-                        return StringUtil.copyPartialMatches(args[3], Arrays.asList("1", "10", "100", "1000", "10000"),
-                                resultList);
                     case "give":
-                        return StringUtil.copyPartialMatches(args[3], Arrays.asList("1", "10", "100", "1000", "10000"),
-                                resultList);
                     case "take":
                         return StringUtil.copyPartialMatches(args[3], Arrays.asList("1", "10", "100", "1000", "10000"),
                                 resultList);
@@ -205,21 +212,30 @@ public class BoxTabCompleter implements TabCompleter {
         }
 
         if (command.getName().equalsIgnoreCase("box")) {
-            List<String> subCommands = new ArrayList<>();
-            if (sender.hasPermission("box.version"))
+            // TODO: new ArrayList<T>
+            val subCommands = new ArrayList<String>();
+
+            if (sender.hasPermission("box.version")) {
                 subCommands.add("version");
-            if (sender.hasPermission("box.autostore") || sender.hasPermission("box.autostore.*"))
+            }
+
+            if (sender.hasPermission("box.autostore") || sender.hasPermission("box.autostore.*")) {
                 subCommands.add("autostore");
-            if (sender.hasPermission("box.give") || sender.hasPermission("box.give.*"))
+            }
+
+            if (sender.hasPermission("box.give") || sender.hasPermission("box.give.*")) {
                 subCommands.add("give");
+            }
 
             if (args.length == 1) {
                 return StringUtil.copyPartialMatches(args[0], subCommands, resultList);
             }
 
             val subCommand = args[0].toLowerCase();
-            if (!subCommands.contains(subCommand))
+
+            if (!subCommands.contains(subCommand)) {
                 return resultList;
+            }
 
             switch (subCommand) {
                 case "autostore":
@@ -230,20 +246,29 @@ public class BoxTabCompleter implements TabCompleter {
                         return resultList;
             }
 
-            List<String> allItems = configManager.getAllItems();
+            val allItems = configManager.getAllItems();
 
-            List<String> allItemsAutostore = (sender.hasPermission("box.autostore.*")) ? allItems.stream()
-                    .filter(itemName -> sender.hasPermission("box.autostore." + itemName)).collect(Collectors.toList())
+            val allItemsAutostore = sender.hasPermission("box.autostore.*")
+                    ? allItems.stream()
+                        .filter(itemName -> sender.hasPermission("box.autostore." + itemName))
+                        .collect(Collectors.toList())
                     : allItems;
+
             int maxPage = allItemsAutostore.size() / 9;
             maxPage = (allItemsAutostore.size() % 9 == 0) ? maxPage : maxPage + 1;
 
-            List<String> allItemsAutostoreClone = new ArrayList<>(allItemsAutostore);
-            allItemsAutostoreClone.addAll(
-                    IntStream.rangeClosed(1, maxPage).boxed().map(String::valueOf).collect(Collectors.toList()));
+            // TODO: new ArrayList<T>
+            val allItemsAutostoreClone = new ArrayList<>(allItemsAutostore);
+
+            allItemsAutostoreClone.addAll(IntStream.rangeClosed(1, maxPage).boxed()
+                    .map(String::valueOf)
+                    .collect(Collectors.toList())
+            );
             allItemsAutostoreClone.add("ALL");
 
-            List<String> players = database.getPlayersMap().values().stream().collect(Collectors.toList());
+            // TODO: new ArrayList<T>
+            val players = new ArrayList<>(database.getPlayersMap().values());
+
             if (args.length == 2) {
                 switch (subCommand) {
                     case "autostore":
@@ -255,18 +280,25 @@ public class BoxTabCompleter implements TabCompleter {
 
             switch (subCommand) {
                 case "autostore":
-                    if (!allItemsAutostore.contains(args[1].toUpperCase()) && !args[1].equalsIgnoreCase("all"))
+                    if (!allItemsAutostore.contains(args[1].toUpperCase()) && !args[1].equalsIgnoreCase("all")) {
                         return resultList;
+                    }
+
                     break;
                 case "give":
-                    if (!players.contains(args[1]))
+                    if (!players.contains(args[1])) {
                         return resultList;
+                    }
+
                     break;
             }
 
-            List<String> allItemsGive = (sender.hasPermission("box.give.*")) ? configManager.getAllItems().stream()
-                    .filter(itemName -> sender.hasPermission("box.give." + itemName)).collect(Collectors.toList())
+            val allItemsGive = sender.hasPermission("box.give.*")
+                    ? configManager.getAllItems().stream()
+                        .filter(itemName -> sender.hasPermission("box.give." + itemName))
+                        .collect(Collectors.toList())
                     : configManager.getAllItems();
+
             if (args.length == 3) {
                 switch (subCommand) {
                     case "autostore":
@@ -276,6 +308,7 @@ public class BoxTabCompleter implements TabCompleter {
                 }
             }
         }
+
         return resultList;
     }
 }
